[package]
name = "maquio"
version = "0.1.0"
edition = "2021"

description = "library for building composable distributed systems"
license = "MIT"
repository = "https://github.com/znx3p0/maquio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canary = "0.2.3"
dashmap = "5.1.0"
ahash = "0.7.6"
camino = "1"
compact_str = { version = "0.3.1", features = [ "serde" ] }
derive_more = "0.99.17"
derive-new = "0.5.9"
async-trait = "0.1.52"
futures-lite = "1"
serde_repr = "0.1.7"
serde = "1"
async-recursion = "1.0.0"

tokio = { version = "1", features = [ "full" ] }
